public interface Enseignant {
    double getSalaireBrut();
    double getCoutCPE(double tauxCharges);
}
