public enum formation {
    ICS, IRC, ETI, PSM, CGP, GPI;
}